--- a/app/src/main/res/layout/layout_plogging_record_history.xml
+++ b/app/src/main/res/layout/layout_plogging_record_history.xml
@@ -2,14 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:minHeight="75dp">
 
     <LinearLayout
         android:id="@+id/layout_plogging_record_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
             android:id="@+id/tv_value_record_count"
@@ -18,7 +21,7 @@
             android:fontFamily="@font/noto_sans_kr_semi_bold"
             android:includeFontPadding="false"
             android:text="10"
-            android:textSize="45sp" />
+            android:textSize="40sp" />
 
         <TextView
             android:id="@+id/tv_unit_record_count"
@@ -26,7 +29,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_kr_semi_bold"
             android:includeFontPadding="false"
-            android:text="분"
+            android:text="번"
             android:textSize="12sp" />
 
     </LinearLayout>
@@ -41,7 +44,7 @@
         android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:layout_marginStart="70dp"
-        app:layout_constraintTop_toTopOf="@id/layout_plogging_record_count"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/layout_plogging_record_count" />
 
     <!-- 이동 거리 -->
@@ -53,7 +56,7 @@
         android:textSize="14sp"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@id/tv_total_time"
         app:layout_constraintStart_toStartOf="@id/tv_total_time" />
 
@@ -66,7 +69,7 @@
         android:textSize="14sp"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@id/tv_total_distance"
         app:layout_constraintStart_toStartOf="@id/tv_total_time"/>
 
