--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxHeight="100dp"
         android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@color/white"
