--- a/app/src/main/res/layout/fragment_plogging.xml
+++ b/app/src/main/res/layout/fragment_plogging.xml
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:text="시간 - 00:00"
+            android:text="시간 - 00 : 00"
             android:textSize="14sp" />
 
         <Space
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:layout_marginEnd="16dp"
-            android:text="이동거리 - 0m"
+            android:text="이동거리 - 0 m"
             android:textSize="14sp" />
     </LinearLayout>
 
