--- a/app/src/main/res/layout/fragment_insta_share.xml
+++ b/app/src/main/res/layout/fragment_insta_share.xml
@@ -13,51 +13,83 @@
 
     <LinearLayout
         android:id="@+id/img_sticker_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:background="@drawable/bg_square_main_color_15"
+        android:layout_width="300dp"
+        android:layout_height="500dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/bg_square_white_grey_10"
         android:orientation="vertical"
-        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_width="208dp"
-            android:layout_height="124dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_app_default" />
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="34dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:src="@drawable/ic_app_circle" />
 
-        <!-- 아래는 유지 -->
-        <ImageView
-            android:id="@+id/img_insta_share"
+            <TextView
+                android:id="@+id/tv_insta_share_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="플로깅 제목"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+                android:textSize="15dp"
+                android:fontFamily="@font/noto_sans_kr_bold"
+                android:includeFontPadding="false"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+
+        </LinearLayout>
+
+
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_temp_turtle" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/img_insta_share"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_app_default" />
+        </FrameLayout>
 
         <TextView
-            android:id="@+id/tv_insta_share_name"
+            android:id="@+id/tv_insta_share_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:includeFontPadding="false"
-            android:text="yyyy-mm-dd 플로깅 인증 (^ . ^)"
-            android:textSize="25sp" />
+            android:text="yyyy년 mm월 dd일"
+            android:textSize="12dp" />
 
         <TextView
-            android:id="@+id/tv_insta_share_distance"
+            android:id="@+id/tv_insta_share_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:fontFamily="@font/noto_sans_kr_semi_bold"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="13dp"
+            android:fontFamily="@font/noto_sans_kr_regular"
             android:includeFontPadding="false"
-            android:text="0 km 플로깅 성공 ~ !"
-            android:textSize="15dp" />
+            android:text="내용"
+            android:textSize="12dp"
+            android:maxLines="3"
+            android:ellipsize="end"/>
     </LinearLayout>
 
     <Button
@@ -71,6 +103,6 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_sticker_layout"
-        app:layout_constraintVertical_bias="0.238" />
+        app:layout_constraintVertical_bias="0.733" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
