--- a/app/src/main/res/layout/fragment_region_volunteer.xml
+++ b/app/src/main/res/layout/fragment_region_volunteer.xml
@@ -49,11 +49,11 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintTop_toBottomOf="@id/btn_select_region"
+            android:layout_marginBottom="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/btn_select_region" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
