--- a/app/src/main/res/layout/fragment_volunteer.xml
+++ b/app/src/main/res/layout/fragment_volunteer.xml
@@ -63,20 +63,22 @@
         android:includeFontPadding="false"/>
 
     <!-- 4) RecyclerView -->
+
+    <!-- 5) 아이콘 -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_recommend_volunteer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="100dp"
         android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_recommend_title"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
-    <!-- 5) 아이콘 -->
     <ImageView
         android:id="@+id/ic_map"
         android:layout_width="95dp"
