--- a/app/src/main/res/layout/item_recomend_volunteer.xml
+++ b/app/src/main/res/layout/item_recomend_volunteer.xml
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content"
         android:text="제목"
         android:textSize="18sp"
-        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:maxLines="1"
+        android:ellipsize="end"
         android:fontFamily="@font/noto_sans_kr_semi_bold"
         android:includeFontPadding="false"/>
 
@@ -25,49 +25,51 @@
         android:id="@+id/tv_recommend_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="설명"
-        android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_recommend_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/noto_sans_kr_regular"
+        android:includeFontPadding="false"
         android:maxLines="2"
-        android:fontFamily="@font/noto_sans_kr_semi_bold"
-        android:includeFontPadding="false"/>
+        android:text="설명"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_recommend_title" />
 
     <TextView
         android:id="@+id/tv_recommend_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/noto_sans_kr_regular"
+        android:includeFontPadding="false"
         android:text="지역"
         android:textSize="10sp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_recommend_description"
         app:layout_constraintStart_toStartOf="parent"
-        android:fontFamily="@font/noto_sans_kr_semi_bold"
-        android:includeFontPadding="false"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_recommend_description" />
 
     <TextView
         android:id="@+id/tv_recommed_separator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/noto_sans_kr_regular"
+        android:includeFontPadding="false"
         android:text=" | "
         android:textSize="10sp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_recommend_description"
         app:layout_constraintStart_toEndOf="@id/tv_recommend_location"
-        android:fontFamily="@font/noto_sans_kr_semi_bold"
-        android:includeFontPadding="false"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_recommend_description" />
 
     <TextView
         android:id="@+id/tv_recommend_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/noto_sans_kr_regular"
+        android:includeFontPadding="false"
         android:text="날짜"
         android:textSize="10sp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_recommend_description"
         app:layout_constraintStart_toEndOf="@id/tv_recommed_separator"
-        android:fontFamily="@font/noto_sans_kr_semi_bold"
-        android:includeFontPadding="false"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_recommend_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
