--- a/app/src/main/res/layout/fragment_region_volunteer.xml
+++ b/app/src/main/res/layout/fragment_region_volunteer.xml
@@ -57,14 +57,19 @@
             app:layout_constraintTop_toBottomOf="@id/btn_select_region" />
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_empty_message"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="아직 등록된 봉사활동이 없어요."
+            android:gravity="center"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:includeFontPadding="false"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/recyclerView_resion_volunteer"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/recyclerView_resion_volunteer"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
