--- a/app/src/main/res/layout/fragment_log_detail.xml
+++ b/app/src/main/res/layout/fragment_log_detail.xml
@@ -42,7 +42,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_share"
-                android:contentDescription="공유" />
+                android:contentDescription="공유"
+                android:clickable="true" />
 
             <ImageView
                 android:id="@+id/btn_log_delete"
