--- a/app/src/main/res/layout/fragment_insta_share.xml
+++ b/app/src/main/res/layout/fragment_insta_share.xml
@@ -8,17 +8,15 @@
     android:background="#CC000000">
 
 
-    <!-- backgroundTint 제거 -->
-
-
     <LinearLayout
         android:id="@+id/img_sticker_layout"
         android:layout_width="300dp"
         android:layout_height="500dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/bg_square_white"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -38,17 +36,16 @@
                 android:id="@+id/tv_insta_share_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="플로깅 제목"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
-                android:textSize="15dp"
+                android:layout_marginTop="20dp"
+                android:ellipsize="end"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
                 android:maxLines="1"
-                android:ellipsize="end"/>
+                android:text="플로깅 제목"
+                android:textSize="15dp" />
 
         </LinearLayout>
-
 
 
         <FrameLayout
@@ -81,28 +78,64 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="13dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:ellipsize="end"
             android:fontFamily="@font/noto_sans_kr_regular"
             android:includeFontPadding="false"
-            android:text="내용"
-            android:textSize="12dp"
             android:maxLines="3"
-            android:ellipsize="end"/>
+            android:text="내용"
+            android:textSize="12dp" />
     </LinearLayout>
 
-    <Button
+    <FrameLayout
         android:id="@+id/btn_insta_share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:text="Instagram에 공유하기"
+        android:layout_width="180dp"
+        android:layout_height="55dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_sticker_layout"
-        app:layout_constraintVertical_bias="0.733" />
+        app:layout_constraintVertical_bias="0.161"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:background="@android:color/transparent">
+
+        <ImageView
+            android:id="@+id/iv_insta_share"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/bg_square_white_grey_30" />
+
+        <TextView
+            android:id="@+id/tv_insta_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/noto_sans_kr_semi_bold"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:text="instagrm에 공유"
+            android:textSize="18sp" />
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/btn_insta_share_close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/noto_sans_kr_semi_bold"
+        android:includeFontPadding="false"
+        android:text="X 창 닫기"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_insta_share"
+        app:layout_constraintVertical_bias="0.141" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
