--- a/app/src/main/res/layout/fragment_journal.xml
+++ b/app/src/main/res/layout/fragment_journal.xml
@@ -32,26 +32,14 @@
     <!-- 일지 모아보기 이동 버튼 -->
     <ImageView
         android:id="@+id/buttonLogList"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="15dp"
         android:gravity="center"
         android:src="@drawable/btn_journal_to_list"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
-        app:layout_constraintEnd_toEndOf="parent" />
-    <TextView
-        android:id="@+id/text_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="일지 List"
-        android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="20dp"
-        android:fontFamily="@font/noto_sans_kr_regular"
-        android:includeFontPadding="false"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLogList"/>
+        app:layout_constraintBottom_toTopOf="@id/calendarCard" />
 
 
     <androidx.cardview.widget.CardView
@@ -60,10 +48,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="0dp"
-        app:layout_constraintTop_toBottomOf="@id/text_list"
+        app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -91,10 +79,10 @@
         android:layout_height="wrap_content"
         android:text="기록을 확인할 날짜를 선택해 주세요"
         android:textSize="14sp"
-        android:textStyle="bold"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="4dp"
+        android:fontFamily="@font/noto_sans_kr_medium"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintTop_toBottomOf="@id/calendarCard"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -103,9 +91,8 @@
         android:id="@+id/logViewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/calendarCard"
+        app:layout_constraintTop_toBottomOf="@id/logDateText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
