--- a/app/src/main/res/layout/fragment_log_list.xml
+++ b/app/src/main/res/layout/fragment_log_list.xml
@@ -32,27 +32,14 @@
     <!-- 캘린더 이동 버튼 -->
     <ImageView
         android:id="@+id/btn_calendar"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:gravity="center"
         android:src="@drawable/btn_list_to_journal"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@id/logListBox"
         app:layout_constraintEnd_toEndOf="parent" />
-    <TextView
-        android:id="@+id/text_caledar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="캘린더"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="20dp"
-        android:fontFamily="@font/noto_sans_kr_regular"
-        android:includeFontPadding="false"
-        app:layout_constraintTop_toBottomOf="@+id/btn_calendar"/>
-
 
 <!--    <androidx.cardview.widget.CardView-->
 <!--        android:id="@+id/logListBox"-->
@@ -90,14 +77,14 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="100dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="0dp"
         android:background="#9ECDEE"
-        app:layout_constraintTop_toBottomOf="@id/text_caledar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
         app:layout_constraintEnd_toEndOf="parent">
 
         <!-- 내부: 제목 + RecyclerView -->
@@ -135,15 +122,13 @@
                 android:id="@+id/textLogListTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/bg_loglist_title_box"
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
-                android:paddingStart="32dp"
-                android:paddingTop="1dp"
-                android:paddingEnd="32dp"
-                android:paddingBottom="2dp"
+                android:paddingVertical="3dp"
+                android:paddingHorizontal="15dp"
                 android:text="일지 List"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
@@ -157,7 +142,7 @@
                 android:layout_weight="1"
                 android:layout_marginTop="8dp"
                 android:background="#9ECDEE"
-                android:padding="12dp"
+                android:padding="8dp"
                 android:clipToPadding="false"
                 android:overScrollMode="never" />
         </LinearLayout>
